add the fxml function now