@@ -1,2 +1,10 @@
 # FinalProject
-This is the Final Project of 426 dorm
+1. have to add the configuration sentence 
+
+```
+"vmArgs": "--module-path /Users/<user>/Downloads/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml",
+```
+
+in the java configuration
+and it looks like this
+![](https://i.imgur.com/sfXtJg8.png)
